# ChangeLog for dev-libs/link-grammar
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.41 2011/10/16 17:24:56 xarthisius Exp $

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  link-grammar-4.7.4.ebuild:
  ppc/ppc64 stable wrt #385699

  04 Oct 2011; Jeroen Roovers <jer@gentoo.org> link-grammar-4.7.4.ebuild:
  Stable for HPPA (bug #372349).

  24 Jul 2011; Raúl Porcel <armin76@gentoo.org> link-grammar-4.7.4.ebuild:
  alpha/ia64/sparc stable wrt #372349

  16 Jul 2011; Markus Meier <maekke@gentoo.org> link-grammar-4.7.4.ebuild:
  x86 stable, bug #372349

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org> link-grammar-4.7.4.ebuild:
  Stable on amd64 wrt bug #372349

  22 Mar 2011; Brent Baude <ranger@gentoo.org> link-grammar-4.7.2.ebuild:
  Marking link-grammar-4.7.2 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  link-grammar-4.7.2.ebuild:
  ppc64 stable wrt #353436

  12 Mar 2011; Raúl Porcel <armin76@gentoo.org> link-grammar-4.7.2.ebuild:
  alpha/ia64/sparc stable wrt #353436

  07 Mar 2011; Jeroen Roovers <jer@gentoo.org> link-grammar-4.7.2.ebuild:
  Stable for HPPA (bug #353436).

*link-grammar-4.7.4 (26 Feb 2011)

  26 Feb 2011; Pacho Ramos <pacho@gentoo.org> link-grammar-4.7.2.ebuild,
  +link-grammar-4.7.4.ebuild:
  Version bump. Also fix building without hunspell support (bug #356455 by
  Faustus).

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> link-grammar-4.7.2.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> link-grammar-4.7.2.ebuild:
  Stable on amd64 wrt bug #353436

*link-grammar-4.7.2 (04 Feb 2011)

  04 Feb 2011; Pacho Ramos <pacho@gentoo.org> +link-grammar-4.7.2.ebuild,
  metadata.xml:
  Version bump, thanks a lot to Tim Harder for his help in bug #340217. Move to
  gnome-office.

  23 Mar 2010; Pacho Ramos <pacho@gentoo.org> link-grammar-4.2.4-r1.ebuild: