@@ -1,8 +1,8 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/Attic/link-grammar-4.7.2.ebuild,v 1.8 2011/03/22 19:57:14 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/Attic/link-grammar-4.7.5.ebuild,v 1.1 2012/04/19 11:10:48 pacho Exp $
 
-EAPI="3"
+EAPI=4
 
 inherit java-pkg-opt-2
 
@@ -13,7 +13,7 @@ SRC_URI="http://www.abisource.com/downloads/${PN}/${PV}/${P}.tar.gz"
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ppc ppc64 sparc x86"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 
 # Set the same default as used in app-text/enchant
 IUSE="aspell +hunspell java static-libs threads"
@@ -47,6 +47,6 @@ src_configure() {
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "install failed"
-	dodoc AUTHORS ChangeLog README || die
+	default
+	! use static-libs && find "${D}" -name '*.la' -exec rm -f {} +
 }
