@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/link-grammar
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.41 2011/10/16 17:24:56 xarthisius Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.42 2012/04/19 11:10:48 pacho Exp $
+
+*link-grammar-4.7.5 (19 Apr 2012)
+
+  19 Apr 2012; Pacho Ramos <pacho@gentoo.org> +link-grammar-4.7.5.ebuild,
+  -link-grammar-4.2.4-r1.ebuild, -link-grammar-4.7.2.ebuild:
+  Version bump, remove old.
 
   16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
   link-grammar-4.7.4.ebuild:
